# RIS-6sem

ЛР1/: РИС_Лекция_02_СинхронизацияВремениXX.docx  график.xlsx
ЛР1/RIS_1/ClientU/ClientU/: ClientU.cpp
ЛР2/: РИС_Лекция_04x_.docx
ЛР2/RIS_2/RIS2_client/: CMakeLists.txt  Client.cpp  Error.cpp  Error.h  RIS2_client.vcxproj  RIS2_client.vcxproj.filters  SectionControlUnit.cpp  SectionControlUnit.h  Time.cpp  Time.h
ЛР2/RIS_2/RIS2_client/Debug/: RIS2_client.exe.recipe  RIS2_client.ilk  vc143.idb
ЛР2/RIS_2/RIS2_client/Debug/RIS2_client.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ЛР2/RIS_2/RIS2_client/Release/: RIS2_client.exe.recipe  RIS2_client.iobj  RIS2_client.ipdb
ЛР2/RIS_2/RIS2_client/Release/RIS2_client.tlog/: CL.command.1.tlog  CL.write.1.tlog  RIS2_client.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ЛР2/RIS_2/RIS2_client_api/: Error.cpp  Error.h  RIS2_client_api.aps  RIS2_client_api.cpp  RIS2_client_api.vcxproj  RIS2_client_api.vcxproj.filters  SectionControlUnit.cpp  SectionControlUnit.h  Time.cpp  Time.h  main.cpp
ЛР2/RIS_2/RIS_2/: CMakeLists.txt  Error.cpp  Error.h  RIS_2.sln  RIS_2.vcxproj  RIS_2.vcxproj.filters  SectionControlUnit.cpp  SectionControlUnit.h  Server.cpp
ЛР3/: RIS_3.sql  Отчет по лабораторной работе №3.docx  РИС_Лабораторная_работа_03.docx
ЛР4-6/: RIS_4-6.sql  Отчет по лабораторной работе №4.docx  РИС_Лабораторная работа_04-06 РСОИ.doc
ЛР7/: РИС_Лабораторная_работа_07.docx  лаб7.docx
ЛР7/lab7/: client.js  config.json  server.js
(+112 files in other folders)
